# Lenslife

./: ESP32_BLE_Implementation.md  IR_sensor_reading.ino  README  case_measurements.txt  flutter_fl_sync_guideline.md  lenslife_ml_cursor_prompt.md  log.md  model.txt  summary.md
App/: FL_SYNC_CHANGES_LOG.md  README.md  pubspec.yaml  session_service.dart
App/lib/: main.dart
App/linux/: CMakeLists.txt
App/test/: widget_test.dart
App/web/: index.html  manifest.json
App/windows/: CMakeLists.txt
esp32/: README.md
esp32/IR_sensor_reading/: IR_sensor_reading.ino
esp32/PH_sensor_reading/: PH_sensor_reading.ino
esp32/firmware/main/: CMakeLists.txt  app_main.c  lenslife_actuators.h  lenslife_ble.c  lenslife_hw.c  lenslife_hw.h  lenslife_measure.c  lenslife_measure.h  lenslife_pins.h  lenslife_power.c  lenslife_power.h  lenslife_rgb_status.c  lenslife_sensor.c  lenslife_sensor.h
esp32/firmware/main/ml/: lenslife_classify.c  lenslife_classify.h  lenslife_ml.c  lenslife_ml.h
esp32/firmware_xiao_esp32s3r8/main/: CMakeLists 2.txt  CMakeLists.txt  app_main.c  idf_component.yml  lenslife_actuators.c  lenslife_actuators.h  lenslife_ads1115.c  lenslife_ads1115.h  lenslife_battery.h  lenslife_ble.c  lenslife_ds18b20.c  lenslife_hw.c  lenslife_i2c.c  lenslife_ir_sensor.c  lenslife_ir_sensor.h  lenslife_measure.c  lenslife_nvs.c  lenslife_pins.h  lenslife_power.c  lenslife_power.h  lenslife_rgb_status.c  lenslife_rgb_status.h  lenslife_sensor.c
esp32/firmware_xiao_esp32s3r8/main/ml/: lenslife_classify.h
product_website/: README.md  index.html
(+68 files in other folders)
